# openstack-ansible-galera_client

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  other-requirements.txt  setup.cfg  tox.ini
defaults/: main.yml
doc/: Makefile
doc/source/: conf.py  index.rst
examples/: playbook.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: galera_client_install.yml  galera_client_install_apt.yml  galera_client_install_dnf.yml  galera_client_install_yum.yml  galera_client_install_zypper.yml  galera_client_post_install.yml  galera_client_pre_install.yml  galera_client_ssl.yml  main.yml
templates/: client.my.cnf.j2
templates/releasenotes/notes/: use-unix-socket-578a4a32490c5e22.yaml
tests/: ansible-role-requirements.yml  ansible.cfg  inventory  test.yml
vars/: debian.yml  gentoo.yml  redhat-7.yml  redhat.yml  suse-42.yml  suse.yml  ubuntu-14.04.yml  ubuntu-16.04.yml  ubuntu-18.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
